--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="{% url 'home'%}">
+      <a class="navbar-brand" href="{% url 'home:home_view'%}">
         AMSKU
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -9,7 +9,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav m-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{% url 'home'%}">Home</a>
+            <a class="nav-link active" aria-current="page" href="{% url 'home:home_view'%}">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">About</a>
@@ -33,7 +33,7 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="accountDropdown">
               {% if request.user.is_authenticated %}
-              <li><a class="dropdown-item text-success" href="{% url 'profile' request.user.id %}">{{request.user}}</a></li>
+              <li><a class="dropdown-item text-success" href="{% url 'home:profile_view' request.user.id %}">{{request.user}}</a></li>
               <li><a class="dropdown-item text-danger" href="{% url 'account_logout'%}">Logout</a></li>
               {% else %}
               <li><a class="dropdown-item text-success" href="{% url 'account_login'%}">Login</a></li>
