--- a/templates/base.html
+++ b/templates/base.html
@@ -2,10 +2,29 @@
 {% load static %}
 <html lang="en">
 <head>
+    {% comment %} <style>
+       
+            * {
+                margin: 0;
+                padding: 0;
+                outline: none !important;
+              }
+              
+              body {
+                overflow-x: hidden !important;
+              }
+    </style> {% endcomment %}
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alumni Management System OF Khulna University</title>
+    <link rel="stylesheet" href=""{% static 'style.css'%}"">
+    <style>
+        .header{
+            text-align: center;
+            padding-bottom: 12px;
+        }
+    </style>
     <!--boostrap 5 css link-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
