--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,49 +1,63 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="{% url 'home:home_view'%}">
-        AMSKU
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav m-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{% url 'home:home_view'%}">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Menu
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">CSE</a></li>
-              <li><a class="dropdown-item" href="#">Search Alumni</a></li>
-              <li><a class="dropdown-item" href="{% url 'charity_events:index_view' %}">Charity Events</a></li>
-              <li><a class="dropdown-item" href="#">Alumni Fee</a></li>
-              <li><a class="dropdown-item" href="#">Blog</a></li>
-              <li><a class="dropdown-item" href="#">Newsletter</a></li>
-            </ul>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="accountDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Account
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="accountDropdown">
-              {% if request.user.is_authenticated %}
-              <li><a class="dropdown-item text-success" href="{% url 'home:profile_view' request.user.id %}">{{request.user}}</a></li>
-              <li><a class="dropdown-item text-danger" href="{% url 'account_logout'%}">Logout</a></li>
-              {% else %}
-              <li><a class="dropdown-item text-success" href="{% url 'account_login'%}">Login</a></li>
-              <li><a class="dropdown-item text-primary" href="{% url 'account_signup'%}">Signup</a></li>
-              {% endif %}
-            </ul>
-          </li>
-        </ul>
-        
-          
-      </div>
+  <div class="container-fluid">
+    <a class="navbar-brand" href="{% url 'home:home_view'%}">
+      AMSKU
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="{% url 'home:home_view'%}">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">About</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+            aria-expanded="false">
+            Menu
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="#">CSE</a></li>
+            <li><a class="dropdown-item" href="#">Search Alumni</a></li>
+            <li><a class="dropdown-item" href="{% url 'charity_events:index_view' %}">Charity Events</a></li>
+            <li><a class="dropdown-item" href="#">Alumni Fee</a></li>
+            <li><a class="dropdown-item" href="#">Blog</a></li>
+            <li><a class="dropdown-item" href="#">Newsletter</a></li>
+          </ul>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="accountDropdown" role="button" data-bs-toggle="dropdown"
+            aria-expanded="false">
+            Account
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="accountDropdown">
+            {% if request.user.is_authenticated %}
+            <li><a class="dropdown-item text-success"
+                href="{% url 'home:profile_view' request.user.id %}">{{request.user}}</a></li>
+            <li><a class="dropdown-item text-danger" href="{% url 'account_logout'%}">Logout</a></li>
+            {% else %}
+            <li><a class="dropdown-item text-success" href="{% url 'account_login'%}">Login</a></li>
+            <li><a class="dropdown-item text-primary" href="{% url 'account_signup'%}">Signup</a></li>
+            {% endif %}
+          </ul>
+        </li>
+        {% if request.user.is_superuser %}
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle text-primary" href="#" id="navbarDropdownAdmin" role="button"
+            data-bs-toggle="dropdown" aria-expanded="false">
+            Admin Utils
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdownAdmin">
+            <li><a class="dropdown-item" href="{% url 'admin_utils:profile-verification' %}">Profile Verification</a>
+            </li>
+          </ul>
+        </li>
+        {% endif %}
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
