--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -22,7 +22,7 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="#">CSE</a></li>
-            <li><a class="dropdown-item" href="#">Search Alumni</a></li>
+            <li><a class="dropdown-item" href="{% url 'search:search_view' %}">Search Alumni</a></li>
             <li><a class="dropdown-item" href="{% url 'charity_events:index_view' %}">Charity Events</a></li>
             <li><a class="dropdown-item" href="#">Alumni Fee</a></li>
             <li><a class="dropdown-item" href="#">Blog</a></li>
