post_edit_delete_social_share

--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -9,7 +9,7 @@
 <div class="collapse" id="collapsePost">
     <div class="row justify-content-center">
         <div class="col-sm-6">
-            <form action={% url 'blog:create_post' request.user.id %} method="POST">
+            <form action={% url 'blog:create_post' %} method="POST">
                 {% csrf_token %} 
                 {{form.media}} {{form}}
                 <input type="submit" value="Publish" class="btn btn-primary btn-sm my-1" />
@@ -20,12 +20,12 @@
 <div class="row justify-content-center">
     <div class="col-sm-6">
         {% for post in  posts %}
-        <h6 class='text-primary mt-3'>{{post.author}} <sub class='text-muted'>{{post.created_on}} </sub></h6>
+        <h6 class='text-primary mt-3'><a class='text-decoration-none' href={% url 'home:profile_view' post.author.user.id %}>{{post.author}}</a> <sub class='text-muted'>{{post.created_on}} </sub></h6>
         <div class="ps-4">
-            {{post.body|truncatechars_html:10|safe}}
+            {{post.body|truncatechars_html:135|safe}}
         </div>
-        <button class='btn btn-success btn-sm'>Read More</button>
-        <button type='button' class='btn btn-dark btn-sm'>{{post.tag}}</button>
+        <a href={% url 'blog:post_details' post.id %}><button class='btn btn-success btn-sm'>Read More</button></a>
+        <button type='button' class='btn btn-secondary btn-sm'>{{post.tag}}</button>
         {% endfor %}
     </div>
 </div>
