--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,9 @@
             text-align: center;
             padding-bottom: 12px;
         }
+        .main_bg{
+            background-color: Lavender;
+        }
     </style>
     <!--boostrap 5 css link-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -31,8 +34,8 @@
 </head>
 <body>
     {% include 'navbar.html' %}
-    <div class="bg-light">
-        <div class="container">
+    <div class="main_bg">
+        <div class="container py-4">
             {% block content %}{% endblock content %}
         </div>
     
