--- a/templates/blog/detail.html
+++ b/templates/blog/detail.html
@@ -63,7 +63,7 @@
             </div>
         </form>
         <div class="d-flex justify-content-center pt-3">
-            <h6 class='p-1'>Share The Blog With</h6>
+            <h6 class='p-1 fw-bold'>Share The Blog With</h6>
             {% post_to_facebook object_or_url "<h5><i class='fa fa-facebook-square text-primary px-1'></i></h5>" %}
             {% post_to_twitter "Blog about: {{post.tag}}" object_or_url "<h5><i class='fa fa-twitter  px-1'></i><h5>" %}
             {% post_to_whatsapp object_or_url "<h5><i class='fa fa-whatsapp text-success px-1'></i></h5>" %}
