--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -26,7 +26,7 @@
             <li><a class="dropdown-item" href="{% url 'charity_events:index_view' %}">Charity Events</a></li>
             <li><a class="dropdown-item" href="#">Alumni Fee</a></li>
             <li><a class="dropdown-item" href="{% url 'blog:blog_index' %}">Blog</a></li>
-            <li><a class="dropdown-item" href="#">Newsletter</a></li>
+            <li><a class="dropdown-item" href="{% url 'newsletter:index' current_newsletter.id %}">Newsletter</a></li>
           </ul>
         </li>
         <li class="nav-item dropdown">
